# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
#
#              C E D A R
#          S O L U T I O N S       "Software done right."
#           S O F T W A R E
#
# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
#
# Author   : Kenneth J. Pronovici <pronovic@ieee.org>
# Project  : banner
# Revision : $Id: Makefile.am 398 2004-05-24 01:59:06Z pronovic $
# Purpose  : Input to automake for project
#
# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #

AUTOMAKE_OPTIONS = no-dependencies 
INCLUDES = -I@srcdir@
bin_PROGRAMS = banner
banner_SOURCES = banner.c letters.h
